--- a/Aplicacao_01/appsettings.json
+++ b/Aplicacao_01/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-0V20B0M\\SQLEXPRESS; Database=Aplicacao_01; User Id=AlbertoDevTeste; Password=asp02"
+    },
   "AllowedHosts": "*"
 }
